Revision history for {{$dist->name}}

{{$NEXT}}

1.005     2019-06-30 01:46:24+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - inconsistent encoding in some messages, *UTF-8 is now applied for SQL query content
    to match COPY statements and other cases including passwords*. In future, the choice
    of encoding may be exposed as an option - for now, hardcoded as UTF-8.

1.004     2019-06-02 01:31:48+08:00 Asia/Kuala_Lumpur
    New features:

    - supports the latest set of error fields allowed in ErrorResponse and NoticeResponse messages,
    as of version 12 beta
    - also supports new error codes as listed in https://www.postgresql.org/docs/12/errcodes-appendix.html

1.003     2019-05-05 19:13:17+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - the COPY handling assumed that the caller would apply encoding, but since that wasn't
    documented and much of the rest of the code assumes UTF-8 anyway (delimiters and newlines
    for example), we now explicitly encode the COPY items when in text format.

1.002     2019-04-28 05:23:16+08:00 Asia/Kuala_Lumpur
    No new features.

    Dependencies:

    - due to postfix dereference, perl 5.024+ is required (thanks to ANDK for reporting)

1.001     2019-04-15 05:55:03+08:00 Asia/Kuala_Lumpur
    New features:

    - Protocol::Database::PostgreSQL::Error class for better abstraction and
    error handling
    - Proper COPY IN/OUT support (text protocol only for now)

    Cosmetic:

    - in debug mode, was generating a lot of unimportant output - have downgraded
    that to trace level instead.

1.000     2019-03-28 21:15:00+08:00 Asia/Kuala_Lumpur

    Forked from Protocol::PostgreSQL due to significant API changes.

Old Protocol::PostgreSQL version history:

0.008     2011-07-16 22:42:10 Europe/London
	Switch to Mixin::Event::Dispatch for event handling. Now uses ->invoke_event and
	->add_handler_for_event to deal with events, passing on_* callbacks to statement