@@ -22,6 +22,10 @@ sub type { 'authentication_request' }
 sub auth_type { shift->{auth_type} }
 sub password_type { shift->{password_type} }
 sub password_salt { shift->{password_salt} }
+sub password_rounds { shift->{password_rounds} }
+sub password_nonce { shift->{password_nonce} }
+sub server_first_message { shift->{server_first_message} }
+sub server_signature { shift->{server_signature} }
 
 sub new_from_message {
     my ($class, $msg) = @_;
@@ -40,6 +44,23 @@ sub new_from_message {
         $info{password_type} = 'plain';
     } elsif($auth_type eq 'AuthenticationOk') {
         # No action required
+    } elsif($auth_type eq 'AuthenticationSASL') {
+        my @methods = split /\0/, $data;
+        $log->tracef('Have auth methods %s', \@methods);
+        $info{password_mechanisms} = \@methods;
+    } elsif($auth_type eq 'AuthenticationSASLContinue') {
+        $log->tracef('Auth continue: %s', $data);
+        my %data = map { /([rsi])=(.*)$/ } split /,/, $data;
+        $log->tracef('Have parameters: %s', \%data);
+        $info{password_rounds} = $data{i};
+        $info{password_salt} = $data{s};
+        $info{password_nonce} = $data{r};
+        $info{server_first_message} = $data;
+    } elsif($auth_type eq 'AuthenticationSASLFinal') {
+        $log->tracef('Auth final %s', $data);
+        my %data = map { /([v])=(.*)$/ } split /,/, $data;
+        $log->tracef('Have parameters: %s', \%data);
+        $info{server_signature} = $data{v};
     } else {
         die 'unknown auth thing here';
     }
