@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - support for SCRAM-SHA256 (see Database::Async::Engine::PostgreSQL for the other half
+    of the implementation)
 
 1.005     2019-06-30 01:46:24+08:00 Asia/Kuala_Lumpur
     No new features.
